remove some white space to fix in 12inch

--- a/app/styles/app/pages/plans.sass
+++ b/app/styles/app/pages/plans.sass
@@ -22,8 +22,8 @@ $plan-buttons: (green: $turf-green, blue: $oxide-blue, grey: $cement-grey)
     +planBtn($color)
 
 .plans-hero
-  padding-top: 70px
-  padding-bottom: 115px
+  padding-top: 60px
+  padding-bottom: 55px
 
 .list--plans
   display: flex
@@ -136,8 +136,8 @@ $plan-buttons: (green: $turf-green, blue: $oxide-blue, grey: $cement-grey)
       margin-bottom: 0
 
   &.section--os
-    padding-top: 8em
-    padding-bottom: 8em
+    padding-top: 6em
+    padding-bottom: 6em
 
   &.section--enterprise
     margin: 3em 1em 9em
